--- a/src/app/user/create-user/create-user.component.html
+++ b/src/app/user/create-user/create-user.component.html
@@ -38,14 +38,17 @@
 
                     <div class="formData l6 m6">
                         <label>Tipo de usuario:</label><br>
-                        <select [(ngModel)]="user.user_type_id" name="user_type_id">
+                        <select [(ngModel)]="user.user_type_id" name="user_type_id" *ngIf="credential == '6'">
                             <option value="1">Alumno</option> 
                             <option value="2">Empleado</option>
                             <option value="3">Cajero</option>
                             <option value="4">Escritor</option>
                             <option value="5">Super escritor</option>
                             <option value="6">Administrador</option>
-                    </select>
+                        </select>
+                        <select [(ngModel)]="user.user_type_id" name="user_type_id" *ngIf="credential == '3'" disabled>
+                            <option value="1">Alumno</option>                             
+                        </select>
                     </div>
 
                     <div class="formData l6 m6">
