Creacion del componente recivo

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -27,6 +27,9 @@
         <a [routerLink]="['/users']">
             <li><button mat-button>Usuarios</button></li>
         </a>
+        <a [routerLink]="['/receipt']">
+            <li><button mat-button>Recibos</button></li>
+        </a>
 
     </ul>
     <h5>USUARIO</h5>
