--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -42,7 +42,7 @@
 </div>
 
 <a (click)="redirectCreateUser()">
-    <div class="boton">
+    <div class="botonFloat">
         <a class="botonA" matTooltip="Crear"><i class="material-icons">add</i></a>
     </div>
 </a>
