--- a/src/app/receipt/create-reciept/create-reciept.component.html
+++ b/src/app/receipt/create-reciept/create-reciept.component.html
@@ -9,54 +9,55 @@
     <div class="cardModule" [@card]="state.card">
         <h2>Crear Recibo</h2>
 
+        <form (submit)="createReceipt()">
+            <div class="flexform">
+                <div>
+                    <label>Nombre de Alumno:</label><br>
+                    <input [(ngModel)]="payment.userName" name="userName" type="search" [matAutocomplete]="auto" (keyup)="searchSugest()">
 
-        <div class="flexform">
-            <div>
-                <label>Nombre de Alumno:</label><br>
-                <input [(ngModel)]="payment.userName" name="userName" type="text" [matAutocomplete]="auto" (keyup)="searchSugest()">
+                    <mat-autocomplete #auto="matAutocomplete">
+                        <mat-option *ngFor="let sugest of sugests" [value]="sugest.name" (onSelectionChange)="getMonthlyFrom(sugest.id)">
+                            {{ sugest.name }}
+                        </mat-option>
+                    </mat-autocomplete>
 
-                <mat-autocomplete #auto="matAutocomplete">
-                    <mat-option *ngFor="let sugest of sugests" [value]="sugest.name" (onSelectionChange)="getMonthlyFrom()">
-                        {{ sugest.name }}
-                    </mat-option>
-                </mat-autocomplete>
+                </div>
 
-            </div>
+                <div>
 
-            <div>
+                    <label>Tipo de usuario:</label><br>
+                    <select [(ngModel)]="payment.type" name="type">
+                            <option value="1">Mensualidad</option> 
+                            <option value="2">Inscripcion</option>
+                            <option value="3">Días</option>                        
+                    </select>
 
-                <label>Tipo de usuario:</label><br>
-                <select [(ngModel)]="payment.type" name="type">
-                        <option value="1">Mensualidad</option> 
-                        <option value="2">Inscripcion</option>
-                        <option value="3">Días</option>                        
-                  </select>
+                </div>
 
-            </div>
+                <div>
+                    <label>Monto:</label><br>
+                    <input *ngIf="payment.type == 1" [(ngModel)]="payment.monthlyAmount" name="monthlyAmount" type="number" disabled>
+                    <input *ngIf="payment.type > 1" [(ngModel)]="payment.amount" name="amount" type="number">
+                </div>
 
-            <div *ngIf="payment.type == 1">
-                <label>Monto:</label><br>
-                <input [(ngModel)]="payment.monthlyAmount" name="monthlyAmount" type="number" disabled>
-            </div>
 
-            <div *ngIf="payment.type > 1">
-                <label>Monto:</label><br>
-                <input [(ngModel)]="payment.amount" name="amount" type="number">
-            </div>
 
-            <div *ngIf="payment.type == 1">
-                <label>Mes:</label><br>
-                <select [(ngModel)]="payment.month" name="month">
+                <div *ngIf="payment.type == 1">
+                    <label>Mes:</label><br>
+                    <select [(ngModel)]="payment.month" name="month">
                         <option *ngFor="let x of months" value="{{ x.value }}">{{ x.view}}</option>
                     </select>
+                </div>
+
+                <div *ngIf="payment.type == 3">
+                    <label>Dias:</label><br>
+                    <input [(ngModel)]="payment.days" name="days" type="number" min="1" max="30">
+
+                </div>
+
+                <button class="btn formBtn" style="background: rgb(238, 163, 0)" type="submit">Crear Recibo</button>
+
             </div>
-
-            <div *ngIf="payment.type == 3">
-                <label>Mes:</label><br>
-                <input [(ngModel)]="payment.days" name="days" type="number" min="1" max="30">
-
-            </div>
-
-        </div>
+        </form>
     </div>
 </div>
