--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -15,8 +15,8 @@
 
 </div>
 
-<input [(ngModel)]="search.from" name="from" type="date" (ngModelChange)="dt = $event">
-<input [(ngModel)]="search.to" name="to" type="date" (ngModelChange)="dt = $event">
+<input [(ngModel)]="search.from" name="from" type="date">
+<input [(ngModel)]="search.to" name="to" type="date">
 
 <div class="search">
 
@@ -28,6 +28,34 @@
         </mat-option>
     </mat-autocomplete>
 </div>
+
+<button (click)="getReceipts()">BUSCAR</button>
+
+<div class="responsive-table">
+    <table align="center">
+        <thead>
+            <tr>
+                <!-- <th class="left">id</th> -->
+                <th>Alumno</th>
+                <th>Fecha</th>
+                <th>Monto</th>
+                <th>Tipo</th>
+            </tr>
+            <!-- <th colspan="3">Opciones</th> -->
+        </thead>
+        <tbody>
+            <tr *ngFor="let re of receipts">
+                <td class="left">{{ re.user_name }}</td>
+                <td>{{ re.created_at }}</td>
+                <td>$ {{ re.amount }}</td>
+                <td *ngIf="re.type == 1">Mensualidad</td>
+                <td *ngIf="re.type == 2">Inscripcion</td>
+                <td *ngIf="re.type == 3">Día</td>                
+                                
+            </tr>
+        </tbody>
+    </table>
+</div>    
 
 
 <a [routerLink]="['/receipt/create']">
